# ChangeLog for sys-devel/gdb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.141 2008/03/30 16:17:57 vapier Exp $

  30 Mar 2008; Mike Frysinger <vapier@gentoo.org> gdb-6.7.1-r3.ebuild,
  gdb-6.8.ebuild:
  Use strip-unsupported-flags rather than replace-flags as pointed out by Donnie.

  30 Mar 2008; Markus Rothe <corsair@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable on ppc64; bug #215339

  30 Mar 2008; Raúl Porcel <armin76@gentoo.org> gdb-6.7.1-r3.ebuild:
  alpha/ia64/sparc stable wrt #215339

  29 Mar 2008; Dawid Węgliński <cla@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable on x86 (bug #215339)

  29 Mar 2008; Jeroen Roovers <jer@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable for HPPA (bug #215339).

*gdb-6.8 (29 Mar 2008)

  29 Mar 2008; Mike Frysinger <vapier@gentoo.org> +gdb-6.8.ebuild:
  Version bump.

  29 Mar 2008; Brent Baude <ranger@gentoo.org> gdb-6.7.1-r3.ebuild:
  stable ppc, bug 215339

  25 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> gdb-6.7.1-r3.ebuild:
  amd64 stable

*gdb-6.7.1-r3 (25 Feb 2008)

  25 Feb 2008; Mike Frysinger <vapier@gentoo.org> +gdb-6.7.1-r3.ebuild:
  Grab fix from upstream for crash #210636 by emerald.

  24 Feb 2008; Raúl Porcel <armin76@gentoo.org> gdb-6.7.1-r2.ebuild:
  alpha/ia64/sparc/x86 stable

*gdb-6.7.1-r2 (22 Jan 2008)

  22 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> +gdb-6.7.1-r2.ebuild:
  Use system libreadline rather than building an internal copy. Closes bug
  #206947.

  30 Dec 2007; Mike Frysinger <vapier@gentoo.org> gdb-6.7.1-r1.ebuild:
  Fixup duel build code a bit as well as the patch itself.

*gdb-6.7.1-r1 (29 Dec 2007)

  29 Dec 2007; Mike Frysinger <vapier@gentoo.org> +gdb-6.7.1-r1.ebuild:
  Add DUEL support #199987 by Sergei Golubchik.

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> gdb-6.7.1.ebuild:
  Stable on ppc64; bug #202246

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> gdb-6.7.1.ebuild:
  amd64 stable wrt #202246
