@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.141 2008/03/30 16:17:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.142 2008/04/07 00:27:34 vapier Exp $
+
+  07 Apr 2008; Mike Frysinger <vapier@gentoo.org> gdb-6.8.ebuild:
+  Workaround build failure with USE=multitarget #216368.
 
   30 Mar 2008; Mike Frysinger <vapier@gentoo.org> gdb-6.7.1-r3.ebuild,
   gdb-6.8.ebuild:
